--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,4 +9,7 @@
     --font-sans: 'JetBrains Mono', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
     --color-black: #060606;
+    --color-gray: #C2C2C2;
+    --color-blue: #1544EF;
+    --text-2xs: .625rem
 }
